# 191023_2025W_HQCS_A3

./: README.md  pyproject.toml
src/task4/: task4_1_bernstein_vazirani_v0.3.py  task4_bernstein_vaziranv_0.3.py
src/utils/: circuit_rendering.py  circuit_reporting.py
task1/: Untitled-Copy1.ipynb  Untitled.ipynb  lebkuchenstadt.csv  task_1.ipynb
task2/: 2Assginment.py
task3/: gluehweindorf.csv  krampuskogel.csv  task3_noise_qml.ipynb  task3_noise_qml.py  task3_nose_qmlv2.ipynb
task4/: task4_bernstein_vaziranv_0.3.py
