[project]
name = "191023-2025w-hqcs-a3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pennylane>=0.44.0",
    "pylatexenc>=2.10",
    "qiskit>=2.3.0",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.45.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
